--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://sanjeyasir.github.io/clientinv000001.github.io",
+    "homepage": "http://sanjeyasir.github.io",
     "name": "inv00001",
     "version": "0.1.0",
     "private": true,
